<resources>
    <string name="app_name">Read</string>
    <string name="read">Read</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="writer">Writer</string>
    <string name="setting">Setting</string>
    <string name="books">Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_books">Local Books</string>
</resources>