<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/books"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/books"  />
    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_baseline_apps_24"
        android:title="@string/category" />

    <item
        android:id="@+id/writer"
        android:icon="@drawable/ic_baseline_create_24"
        android:title="@string/writer" />

    <item
        android:id="@+id/downloaded_book"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:title="@string/local_books" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />
</menu>